# ur3e_melodic

./: Dockerfile  README.md  build.sh  run.sh
Docker/: Dockerfile  requirements.txt  run.sh
Docker/src/ur_control/: CMakeLists.txt  package.xml
pip/: requirements_pytorch.txt
src/ur3e_gazebo/: CMakeLists.txt
src/ur3e_gazebo/launch/: ur3e_sweep.launch  ur3e_test.launch
src/ur3e_gazebo/urdf/: README.md  ur_zig.xacro
src/ur3e_gazebo/worlds/: ur3e_cubes.world
src/ur3e_jig_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur3e_jig_moveit_config/config/: ros_controllers.yaml  ur_robot_gazebo.srdf
src/ur3e_jig_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  start_moveit.launch  (+7 more)
src/ur3e_zig_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3e_gazebo/: package.xml
ur3e_gazebo/launch/: ur3e_hande.launch  ur3e_sweep.launch
ur3e_gazebo/launch/inc/: load_ur_hande.launch.xml
ur3e_gazebo/meshes/: jig.stl
ur3e_gazebo/models/base_box/: model.config
ur3e_gazebo/urdf/: ur_gripper_hande.xacro  ur_jig.xacro
ur3e_gazebo/worlds/: README.md
ur3e_jig_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  fake_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  ur_robot_gazebo_moveit_controller_manager.launch.xml  warehouse.launch
ur3e_motion/: CMakeLists.txt  package.xml  setup.py
ur3e_motion/scripts/: plotting_2d.py  ur3e_sweep.py  ur_planner.py
ur_control/scripts/: plotting_rpy_2d.py
(+23 files in other folders)
