<?xml version="1.0"?>
<package>
  <name>ur3e_gazebo</name>
  <version>0.0.0</version>
  <description>
    Gazebo simulation for the UR3e robot
  </description>

  <maintainer email="d1301539@gmail.com">Shumpei Morita</maintainer>
  <author email="d1301539@gmail.com">Shumpei Morita</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ur_description</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" /> 
  </export>

</package>
